[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "imbalanced-learn>=0.13.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "statsmodels>=0.14.4",
    "streamlit>=1.45.1",
    "xgboost>=3.0.2",
]
